# DM14

./: CMakeLists.txt  README.md  make.sh  todo.txt
.github/workflows/: build.yml
doc/: doxygen.conf  main.doc
examples/: M14Defs.hpp  comm.m14  demo1.m14  distarray.m14  distarray.m14.cpp  factorial.m14  image.m14  image2.m14  matmul.m14  street2.m14  testsrc1.m14  testthreads.m14
src/: DataTypes.cpp  DatatypeBase.cpp  DatatypeBase.hpp  EBNF.hpp  EBNF.hpp2  amazon.cpp  amazon.m14  amazon.m14.cpp  ast.cpp  ast.hpp  comm.m14.cpp  compiler.cpp  compiler.hpp  demo1.m14.cpp  distfibonacci.m14.cpp  fibonacci.m14.cpp  func.m14.hpp  grammar.hpp  image.m14  image.m14.cpp  image2.m14  main.cpp  main.hpp  make  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  socket-client.py  socket-test.py  street.m14  street.m14.cpp  test.cpp  testocr.cpp  testsrc.m14  testsrc.m14.cpp  testthreads.m14.cpp  token.hpp  types.cpp  types.hpp
src/includes/core/: Array.hpp  DM14GLOBAL.m14  M14Helper.cpp  M14Helper.hpp  Node-current.cpp  Node-origi.cpp  Node.cpp  Node.hpp  Node2.cpp  Sleep.cpp  Sleep.hpp  Socket.cpp  Socket.hpp  Thread.hpp  common.cpp  common.hpp  message.cpp  message.hpp  mutex.hpp
src/includes/core/bc/: Array.hpp  M14Helper.cpp  Node.cpp  Node.hpp  Node2.cpp  Node2.hpp  Socket.cpp  Socket.hpp  Thread.hpp  common.cpp
src/includes/imgproc/: objectDistance.cpp  objectDistance.hpp
src/includes/io/: File.cpp  File.hpp  fileWatcher.cpp  fileWatcher.hpp  io.cpp  io.hpp  string.cpp  string.hpp  watcher.hpp
src/includes/math/: math.cpp  math.hpp
src/includes/multi/: Thread.hpp
src/includes/ocr/: tesseract.cpp  tesseract.hpp
src/includes/sys/: sys.cpp  sys.hpp  time.cpp  time.hpp
